[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "watasu"
version = "0.1.50"
description = "Python SDK for Watasu"
readme = "python/README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
dependencies = [
  "requests>=2.31",
  "websocket-client>=1.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["python/watasu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python", "python-code-interpreter/src"]

[project.urls]
Repository = "https://github.com/watasuio/sdk"
