[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "watasu-code-interpreter"
version = "0.1.49"
description = "Code Interpreter SDK for Watasu"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
dependencies = [
  "watasu>=0.1.47,<0.2",
]

[project.urls]
Repository = "https://github.com/watasuio/sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/watasu_code_interpreter"]
