[package]
name = "watasu"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Watasu sandboxes"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/watasu"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = "0.22"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "handshake"] }
url = "2"
