[package]
repository = "https://github.com/watasuio/sdk"
name = "watasu"
version = "0.1.42"
edition = "2021"
resolver = "2"
description = "Rust SDK for Watasu"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/watasu"
readme = "README.md"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls", "tokio-tungstenite/rustls-tls-webpki-roots"]
rustls-tls-native-roots = [
  "reqwest/rustls-tls-native-roots",
  "tokio-tungstenite/rustls-tls-native-roots",
]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
native-tls-vendored = [
  "native-tls",
  "reqwest/native-tls-vendored",
  "tokio-tungstenite/native-tls-vendored",
]

[package.metadata.docs.rs]
features = ["rustls-tls"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = "0.22"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect"] }
url = "2"
